[package]
name = "yt-chanvids"
description = "Generates a list of links to all public videos of a YouTube channel."
version = "1.2.3"
authors = ["Daniel Araujo <contact@daniel-araujo.pt>"]
repository = "https://github.com/daniel-araujo/yt-chanvids.git"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]

# HTTP requests.
hyper = "0.13"
hyper-tls = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["full", "blocking"] }

# Parsing command line.
getopts = "0.2"

# Parsing json, url query strings.
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.2"
