[package]
name = "yt-chanvids"
description = "Generates a list of links to all public videos of a YouTube channel."
version = "1.3.0"
authors = ["Daniel Araujo <contact@daniel-araujo.pt>"]
repository = "https://github.com/daniel-araujo/yt-chanvids.git"
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2018"

[lib]
name = "yt_chanvids"
path = "src/lib.rs"

[[bin]]
name = "yt-chanvids"
path = "src/cli.rs"

[dependencies]

# HTTP requests.
attohttpc = "0.15"

# Parsing command line.
getopts = "0.2"

# Parsing json, url query strings.
serde = "1.0"
serde_json = "1.0"
urlencoding = "1.1"